[workspace.package]
version = "0.1.0"
authors = ["Martin Miksanik"]
description = "Rust runtime for OP_NET"
documentation = "https://dev.opnet.org/"
edition = "2021"

[workspace.dependencies]
# This crate is much larger than expected. Avoid using it unless absolutely necessary.
ethnum = "1.5.0"
lol_alloc = "0.4.1"
rust_runtime = { path = "." }
sha2-const = "0.1.2"

[package]
name = "rust_runtime"
version = { workspace = true }
edition = { workspace = true }

[workspace]
members = ["example"]

[dependencies]
# This crate is much larger than expected. Avoid using it unless absolutely necessary.
ethnum = { workspace = true }
sha2-const = {workspace = true }
libc-print = {version = "0.1.22", optional=true}
rand = {version = "0.8.5"}

[features]
std = []
