[workspace.package]
version = "0.1.0"
authors = ["Martin Miksanik"]
description = "Rust runtime for OP_NET"
documentation = "https://dev.opnet.org/"
edition = "2021"

[workspace.dependencies]
# This crate is much larger than expected. Avoid using it unless absolutely necessary.
ethnum = "1.5.0"
lol_alloc = "0.4.1"
rust_runtime = { path = "." }
sha2-const = "0.1.2"
uint = {version = "0.10.0", default-features = false}

[package]
name = "rust_runtime"
version = { workspace = true }
edition = { workspace = true }

[workspace]
members = ["op20", "interface"]

[dependencies]
# This crate is much larger than expected. Avoid using it unless absolutely necessary.
ethnum = { workspace = true }
uint = { workspace = true }
sha2-const = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.9.0" }
libc-print = { version = "0.1.22" }
ripemd = "0.1.3"
bitcoin = "0.32.5"
secp256k1 = { version = "0.30.0", features = ["rand", "hashes", "std"] }

[features]
std = []
