[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s" # or "s" for size-speed balance
lto = true # Link Time Optimization for smaller binary
codegen-units = 1 # Ensures code is optimized across the board
panic = "abort" # Avoids including panic runtime support
strip = true

[dependencies]
rust_runtime = {path=".."}
lol_alloc = "0.4.1"

[features]