[package]
name = "op20"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s" # or "s" for size-speed balance
lto = true # Link Time Optimization for smaller binary
codegen-units = 1 # Ensures code is optimized across the board
panic = "abort" # Avoids including panic runtime support
strip = true

[dependencies]
lol_alloc = { workspace = true }
rust_runtime = { workspace = true }
sha2-const = {workspace = true }


[features]
